--- a/react_form/src/index.css
+++ b/react_form/src/index.css
@@ -10,7 +10,7 @@
 html,body {
     height: 100%;
     width: 100%;
-    background-color: #00000055;
+    background-color: #000;
 }
 
 #root {
@@ -39,4 +39,13 @@ footer {
     height: 5vh;
     display: flex;
     align-items: center;
+}
+
+p {
+    font-size: 13vh;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    color: #fff;
 }
