--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -88,6 +88,17 @@
         --primary-foreground:213 31% 91%;
         --border:217 33% 20%;
     }
+
+    *{
+        @apply border-border;
+    }
+    html{
+        @apply scroll-smooth;
+    }
+    body{
+        @apply bg-background text-foreground transition-colors duration-300;
+        font-feature-setting:"rlig" 1, "calt" 1;
+    }
 }
 
 @utility container{
@@ -112,7 +123,7 @@
 }
 
 @utility text-glow {
-    @apply realtive;
+    @apply relative;
     text-shadow:0 0 10px rgba(167, 139, 250, 0.5);
 }
 
@@ -142,4 +153,11 @@
 @utility meteor {
     @apply absolute bg-linear-to-r from-white via-white to-transparent rounded-full;
     box-shadow:0 0 10px 5px rgba(255,255,0.3);
+}
+
+#root{
+    max-width: 100%;
+    margin: 0 auto;
+    padding: 0;
+    text-align: center;
 }
