--- a/01_react/src/App.css
+++ b/01_react/src/App.css
@@ -84,3 +84,30 @@ h1{
     border-radius: 10% 0% 0% 0%;
 
 }
+
+.app{
+    font-family: sans-serif;
+    text-align: center;
+    padding: 2em;
+    transition: background-color 0.3s ease , color 0.3s ease;
+}
+
+.light {
+    background-color: #f5f5f5;
+    color: #222;
+}
+
+.dark{
+    background-color: #222;
+    color: #f5f5f5;
+}
+
+.btn{
+    padding: 0.5em 1em;
+    margin-bottom: 1em;
+    cursor: pointer;
+    border:none;
+    border-radius: 5px;
+    background-color: #888;
+    color: white;
+}
