--- a/props_project/src/index.css
+++ b/props_project/src/index.css
@@ -17,6 +17,7 @@ width: 100%;
 background-color: #111;
 padding: 30px;
 display: flex;
+justify-content:center;
 gap: 30px;
 flex-wrap: wrap;
 }
@@ -59,8 +60,6 @@ color: #8b8b8b;
 }
 
 
-.center{
-}
 
 .center h3{
 font-size: 16px;
